--- a/Sonae/Diario/2. Delta_Ninjas_Audit_Fotos.ipynb
+++ b/Sonae/Diario/2. Delta_Ninjas_Audit_Fotos.ipynb
@@ -53,17 +53,8 @@
     "\n",
     "# Índice\n",
     "\n",
-    "1. [Data Cleaning](#section1)<br>\n",
-    "2. [DataFusion Long](#section2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"section1\"></a>\n",
-    "# <center>1. Data Cleaning</center>\n",
-    "[Voltar ao índice](#section0)<br>\n"
+    "1. [Ninjas](#section1)<br>\n",
+    "2. [Fotos](#section2)"
    ]
   },
   {
@@ -98,6 +89,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Voltar ao índice](#section0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"section1\"></a>\n",
     "- # `Ninjas`"
    ]
   },
@@ -151,7 +150,7 @@
     "\"\"\"Datetime\"\"\"\n",
     "\n",
     "# se xlsx\n",
-    "dfNinjas['DATA'] = pd.to_datetime(dfNinjas['DATA'], format='%d-%m-%Y') \n",
+    "dfNinjas['DATA'] = pd.to_datetime(dfNinjas['DATA'], format='%Y-%m-%d') \n",
     "\n",
     "# se xlsb\n",
     "#dfNinjas['DATA'] = pd.to_datetime(dfNinjas['DATA'], unit='d', origin=datetime.datetime(1899, 12, 30)) \n",
@@ -214,7 +213,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfNinjas['Dia_da_Semana'] = dfNinjas['DATA'].dt.day_name().map({'Friday': 'Sexta', \n",
+    "dfNinjas['Dia_da_Semana'] = dfNinjas['DATA'].dt.day_name().map({'Monday': \"Segunda\",\n",
+    "                                                                'Tuesday': \"Terça\",\n",
+    "                                                                'Wednesday': \"Quarta\",\n",
+    "                                                                'Thursday': \"Quinta\",\n",
+    "                                                                'Friday': 'Sexta', \n",
     "                                                                'Saturday': 'Sábado', \n",
     "                                                                'Sunday': 'Domingo'})\n",
     "\n",
@@ -294,6 +297,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Voltar ao índice](#section0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"section2\"></a>\n",
     "# Fotos"
    ]
   },
@@ -396,15 +407,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dicionarioCodLojas = {v: k for k, v in dicionarioLojas.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dicionarioCodLojas = {v: k for k, v in dicionarioLojas.items()}\n",
+    "\n",
     "dfFotos2[\"STORE\"] = dfFotos2[\"STORE_NAME\"].map(dicionarioCodLojas) "
    ]
   },
