--- a/Sonae/Diario/1. Delta_DiárioCH.ipynb
+++ b/Sonae/Diario/1. Delta_DiárioCH.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "CPU times: total: 93.8 ms\n",
+      "Wall time: 271 ms\n"
      ]
     }
    ],
@@ -72,22 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "inicio = \"Info_DELTA_2023\"\n",
-    "dia_actual = \"1106\"            # Do tipo mmdd\n",
+    "dia_actual = \"1107\"            # Do tipo mmdd\n",
     "\n",
-    "base_Clickhouse_120 = \"P\"      # P ou I, quer dizer que o dia anterior é par ou ímpar\n",
-    "base_Clickhouse_120_nova = \"P\" # A alternativa diferente à da variável anterior\n",
-    "\n",
-    "# if int(dia_actual)%2==0:\n",
-    "#     base_Clickhouse_120 = \"I\"      # P ou I, quer dizer que o dia anterior é par ou ímpar\n",
-    "#     base_Clickhouse_120_nova = \"P\" # A alternativa diferente à da variável anterior\n",
-    "# else:\n",
-    "#     base_Clickhouse_120 = \"P\"      # P ou I, quer dizer que o dia anterior é par ou ímpar\n",
-    "#     base_Clickhouse_120_nova = \"I\" # A alternativa diferente à da variável anterior"
+    "if int(dia_actual)%2==0:\n",
+    "    base_Clickhouse_120 = \"I\"      # P ou I, quer dizer que o dia anterior é par ou ímpar\n",
+    "    base_Clickhouse_120_nova = \"P\" # A alternativa diferente à da variável anterior\n",
+    "else:\n",
+    "    base_Clickhouse_120 = \"P\"      # P ou I, quer dizer que o dia anterior é par ou ímpar\n",
+    "    base_Clickhouse_120_nova = \"I\" # A alternativa diferente à da variável anterior"
    ]
   },
   {
@@ -113,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,15 +124,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 42.9 s\n",
-      "Wall time: 1min 21s\n"
+      "CPU times: total: 35.6 s\n",
+      "Wall time: 1min 17s\n"
      ]
     }
    ],
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Colunas de métricas interessantes"
+    "# Colunas de Métricas Importantes"
    ]
   },
   {
@@ -281,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,15 +352,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 44.5 s\n",
-      "Wall time: 1min 10s\n"
+      "CPU times: total: 44.3 s\n",
+      "Wall time: 1min 9s\n"
      ]
     }
    ],
@@ -411,15 +408,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 15.7 s\n",
-      "Wall time: 34.7 s\n"
+      "CPU times: total: 22.1 s\n",
+      "Wall time: 31.9 s\n"
      ]
     }
    ],
@@ -467,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,15 +489,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 17.3 s\n",
-      "Wall time: 23.3 s\n"
+      "CPU times: total: 12.5 s\n",
+      "Wall time: 23.2 s\n"
      ]
     }
    ],
@@ -527,15 +524,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 28.2 s\n",
-      "Wall time: 33.6 s\n"
+      "CPU times: total: 22.4 s\n",
+      "Wall time: 33.3 s\n"
      ]
     }
    ],
@@ -575,15 +572,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 2min\n",
-      "Wall time: 2min 38s\n"
+      "CPU times: total: 1min 45s\n",
+      "Wall time: 2min 36s\n"
      ]
     }
    ],
@@ -645,15 +642,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 19.5 s\n",
-      "Wall time: 24.6 s\n"
+      "CPU times: total: 17.3 s\n",
+      "Wall time: 23.8 s\n"
      ]
     }
    ],
@@ -690,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,15 +735,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 3min 54s\n",
-      "Wall time: 5min 15s\n"
+      "CPU times: total: 3min 46s\n",
+      "Wall time: 5min\n"
      ]
     }
    ],
@@ -780,15 +777,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4min 42s\n",
-      "Wall time: 5min 13s\n"
+      "CPU times: total: 4min 21s\n",
+      "Wall time: 5min 9s\n"
      ]
     }
    ],
@@ -823,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,15 +874,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.55 s\n",
-      "Wall time: 5.24 s\n"
+      "CPU times: total: 4.72 s\n",
+      "Wall time: 5.52 s\n"
      ]
     }
    ],
@@ -942,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,15 +957,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 52 s\n",
-      "Wall time: 58.8 s\n"
+      "CPU times: total: 44.8 s\n",
+      "Wall time: 58.2 s\n"
      ]
     }
    ],
@@ -985,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,18 +1018,25 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "         np.where(dfFinal.Balance_Smart > 1.1 , \"Perigo de Rotura\", \n",
-    "         np.where(\n"
+    "dfFinal[\"Alerta_Brands\"] = np.where(dfFinal.Balance_Smart > 1.1 , \"Rotura Iminente\", \n",
+    "                           np.where(dfFinal.Balance_Smart > 0.83 , \"Rotura Prevista\",\n",
+    "                           np.where(dfFinal.Balance_Smart < 0.83 , \"Stock Assegurado\", \"Sem Dados\")))"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "dfEscreverMes.DATA.unique()"
+    "cond_rotura_evitada = (dfFinal.ROTURA == 0) & ((dfFinal.Balance_Smart.shift(3) > 0.83) | (dfFinal.Balance_Smart.shift(4) > 0.83) |(dfFinal.Balance_Smart.shift(5) > 0.83))\n",
+    "dfFinal[\"Previsao_BN\"] = np.where(cond_rotura_evitada , \"Rotura Evitada pela B&N\", \n",
+    "                          np.where(dfFinal.ROTURA != 0 , \"Sem Rotura\", \"Rotura Não Evitada pela B&N\" ))"
    ]
   },
   {
@@ -1059,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1144,9 +1148,9 @@
      "text": [
       "A base Delta_dbd_Dia foi exportada para o clickhouse\n",
       "A base Delta_dbd_Mes foi exportada para o clickhouse\n",
-      "A base Delta_dbd_120dias_P foi exportada para o clickhouse\n",
-      "CPU times: total: 51.3 s\n",
-      "Wall time: 4min 32s\n"
+      "A base Delta_dbd_120dias_I foi exportada para o clickhouse\n",
+      "CPU times: total: 52.9 s\n",
+      "Wall time: 4min 30s\n"
      ]
     }
    ],
@@ -1242,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1263,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,15 +1283,8 @@
    "source": [
     "B&N prevê rotura:\n",
     "\n",
-    "Risco de rotura tem de ser diferente de -1 quando stk = 0\n",
+    "Risco de rotura tem de ser diferente de -1 quando stk = 0 Balance_Smart\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "rotura evitada \n"
    ]
   },
   {
