--- a/Sonae/Diario/1. Delta_DiárioCH.ipynb
+++ b/Sonae/Diario/1. Delta_DiárioCH.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 93.8 ms\n",
-      "Wall time: 271 ms\n"
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -764,7 +764,7 @@
     "    .transform(lambda x: x.rolling(window=30, min_periods=1).mean())* dfFinal['CONTAGEM_SEMANA3']))\n",
     "     / dfFinal[\"STK\"])\n",
     "\n",
-    "dfFinal[\"Balance_Smart3\"] = np.where(dfFinal[\"STK\"]<=0, -1, dfFinal[\"Balance_Smart3\"])\n",
+    "dfFinal[\"Balance_Smart3\"] = np.where(dfFinal[\"STK\"]<=0, 5, dfFinal[\"Balance_Smart3\"])\n",
     "dfFinal[\"Balance_Smart_3_Dias_Antes\"] = dfFinal[\"Balance_Smart3\"].shift(2)\n"
    ]
   },
@@ -807,7 +807,7 @@
     "    .transform(lambda x: x.rolling(window=30, min_periods=1).mean())* dfFinal['CONTAGEM_SEMANA']))\n",
     "     / dfFinal[\"STK\"])\n",
     "\n",
-    "dfFinal[\"Balance_Smart\"] = np.where(dfFinal[\"STK\"]<=0, -1, dfFinal[\"Balance_Smart\"])\n",
+    "dfFinal[\"Balance_Smart\"] = np.where(dfFinal[\"STK\"]<=0, 5, dfFinal[\"Balance_Smart\"])\n",
     "dfFinal[\"Balance_Smart_5_Dias_Antes\"] = dfFinal[\"Balance_Smart\"].shift(4)\n"
    ]
   },
@@ -1034,17 +1034,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cond_rotura_evitada = (dfFinal.ROTURA == 0) & ((dfFinal.Balance_Smart.shift(3) > 0.83) | (dfFinal.Balance_Smart.shift(4) > 0.83) |(dfFinal.Balance_Smart.shift(5) > 0.83))\n",
-    "dfFinal[\"Previsao_BN\"] = np.where(cond_rotura_evitada , \"Rotura Evitada pela B&N\", \n",
-    "                          np.where(dfFinal.ROTURA != 0 , \"Sem Rotura\", \"Rotura Não Evitada pela B&N\" ))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "mask = (dfEscreverMes.STORE_NAME==\"MDL VALE DO SOUSA\") & (dfEscreverMes.DESC_ARTIGO==\"AZEITONA RETALHADA 210G QAMPO\")\n",
-    "dfEscreverMes[mask][['DATA','DESC_ARTIGO','STORE_NAME', \"SELLOUT\", \"STOCK\", \"FORNECIMENTO\", \"Balance_Smart\"]]"
+    "cond_rotura_evitada = (dfFinal.ROTURA == 1) & ((dfFinal.Balance_Smart.shift(3) > 0.83) | (dfFinal.Balance_Smart.shift(4) > 0.83) |(dfFinal.Balance_Smart.shift(5) > 0.83))\n",
+    "dfFinal[\"Previsao_BN\"] = np.where((dfFinal.ROTURA == 0) & ((dfFinal.Balance_Smart.shift(3) > 0.83) | (dfFinal.Balance_Smart.shift(4) > 0.83) |(dfFinal.Balance_Smart.shift(5) > 0.83)) , 1, 0)"
    ]
   },
   {
@@ -1067,7 +1058,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfFinal[\"ROTURA\"] = np.where(dfFinal[\"ROTURA\"]==1, \"ROTURA\", \"PRESENTE\")\n",
+    "dfFinal[\"ROTURA_EXTENSO\"] = np.where(dfFinal[\"ROTURA\"] == 1, \"ROTURA\", \"PRESENTE\")\n",
     "dfFinal['Subinsignia'] = dfFinal['STORE_NAME'].str.split().str[0]\n",
     "dfFinalEscrever = dfFinal.copy()\n",
     "\n",
@@ -1084,36 +1075,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "dfFinal = dfFinal.copy()\n",
-    "# Extract year and month from the 'date' column\n",
-    "dfFinal['Ano'] = dfFinal['DATA'].dt.year\n",
-    "dfFinal['Ano_Anterior'] = dfFinal['Ano'] + 1\n",
-    "dfFinal['Mes'] = dfFinal['DATA'].dt.month\n",
-    "\n",
-    "# Mês Actual\n",
-    "media_mes_actual = dfFinal.groupby(['Ano', 'Mes', \"STORE\", \"EAN\"])['SELLOUT'].mean().reset_index()\n",
-    "media_mes_actual = media_mes_actual.rename(columns={'SELLOUT': 'Media_Sellout_Mensal'})\n",
-    "\n",
-    "# Mês Homólogo\n",
-    "media_mes_homologo = dfFinal.groupby(['Ano_Anterior', 'Mes', \"STORE\", \"EAN\"])['SELLOUT'].mean().reset_index()\n",
-    "media_mes_homologo = media_mes_homologo.rename(columns={'SELLOUT': 'Media_Sellout_Mensal_Homologo'})\n",
-    "\n",
-    "# Calculate the monthly mean for the previous month\n",
-    "media_mes_anterior = dfFinal.groupby(['Ano', 'Mes', \"STORE\", \"EAN\"])['SELLOUT'].mean().shift(1).reset_index()\n",
-    "media_mes_anterior.rename(columns={'SELLOUT': 'Media_Sellout_Mensal_Mes_Anterior'}, inplace=True)\n",
-    "\n",
-    "# Merge the monthly mean back into the original DataFrame\n",
-    "dfFinal = dfFinal.merge(media_mes_actual, on=['Ano', 'Mes', \"STORE\", \"EAN\"], how=\"left\")\n",
-    "dfFinal = dfFinal.merge(media_mes_homologo, left_on=['Ano', 'Mes', \"STORE\", \"EAN\"], right_on=['Ano_Anterior', 'Mes', \"STORE\", \"EAN\"], how=\"left\")\n",
-    "dfFinal = dfFinal.merge(media_mes_anterior, on=['Ano', 'Mes', \"STORE\", \"EAN\"], how=\"left\")\n",
-    "\n",
-    "dfFinal = dfFinal.drop(columns = [\"Ano_Anterior_x\", \"Ano_Anterior_y\"])\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1122,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
